vanilla rust week raster

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -10,7 +10,6 @@
     "import importlib\n",
     "from pathlib import Path\n",
     "\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "from bokeh.io import output_notebook\n",
@@ -23,38 +22,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trafficdata import parser \n",
+    "import dataloader\n",
+    "importlib.reload(dataloader)\n",
     "\n",
-    "importlib.reload(parser)\n",
-    "\n",
-    "minutes_to_bin = 5\n",
-    "\n",
-    "def week_bin(buf: int) -> int:\n",
-    "    return (parser.Column.weekday(buf) * 24 + parser.Column.hour(buf)) * 12 + (parser.Column.minute(buf) // 5)\n",
-    "\n",
-    "def day_bin(buf: int) -> int:\n",
-    "    return parser.Column.hour(buf) * 12 + (parser.Column.minute(buf) // minutes_to_bin)\n",
-    "\n",
-    "def bytes_linear(buf: int) -> int:\n",
-    "    return 1 << parser.Column.log_bytes(buf)\n",
-    "\n",
-    "\n",
+    "minutes_to_bin = 4\n",
+    "data = np.zeros((7, 24 * 60 // minutes_to_bin), dtype=np.float32)\n",
     "datadir = Path(\"data\")\n",
     "days = list(sorted(datadir.iterdir()))\n",
-    "print(days)\n",
-    "columns = parser.read_columns(\n",
-    "    [d for d in days if \"2022\" in d.name], \n",
-    "    [\n",
-    "        (\"weekday\", parser.Column.weekday),\n",
-    "        (\"bin\", week_bin),\n",
-    "        (\"x\", day_bin),\n",
-    "        (\"y\", bytes_linear),\n",
-    "    ],\n",
-    "    file_idx_col=\"week\"\n",
-    ")\n",
-    "print(\"finished read\")\n",
-    "print(columns)\n",
-    "d = pd.DataFrame(data=columns)"
+    "for day in days:\n",
+    "    dataloader.rasterize_week(data, str(day))"
    ]
   },
   {
@@ -63,9 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sums = d.groupby([\"week\", \"weekday\", \"bin\", \"x\"]).sum()\n",
-    "sums\n",
-    "avgs = sums.groupby([\"weekday\", \"bin\", \"x\"]).mean()"
+    "data[1]"
    ]
   },
   {
@@ -77,9 +51,7 @@
     "from bokeh.palettes import Dark2_5 as palette\n",
     "from bokeh.plotting import figure, show, output_file, save\n",
     "\n",
-    "bin_labels = {\n",
-    "    300: \"\"\n",
-    "}\n",
+    "bin_labels = {}\n",
     "for bin in range((24 * 60) // minutes_to_bin):\n",
     "    hour = (bin * minutes_to_bin) // 60\n",
     "    minute = (bin * minutes_to_bin) % 60\n",
@@ -99,11 +71,9 @@
     "    \"Sunday\": \"#ff0000\"\n",
     "}\n",
     "\n",
+    "xs = np.arange(0, len(data[0]))\n",
     "for weekday, (name, color) in enumerate(days.items()):\n",
-    "    day_avgs = avgs.query(f\"weekday == {weekday}\")\n",
-    "    xs = day_avgs.axes[0].get_level_values(2)\n",
-    "    ((_, ys), ) = day_avgs.items()\n",
-    "    # ys = np.exp(ys / 100.0)\n",
+    "    ys = data[weekday]\n",
     "    p.line(x=xs, y=ys, line_width=2, color=color, legend_label=name)\n",
     "p.legend.location = \"top_left\"\n",
     "p.legend.click_policy=\"hide\"\n",
