--- a/explore.ipynb
+++ b/explore.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[1]"
+    "max(max(a) for a in data)"
    ]
   },
   {
@@ -58,27 +58,29 @@
     "    posmod_hour = ((hour + 11) % 12) + 1\n",
     "    bin_labels[bin] = f\"{posmod_hour}:{minute:02} {'am' if hour < 12 else 'pm'}\"\n",
     "\n",
-    "p = figure(width=900, height=400) # , y_axis_type=\"log\")\n",
+    "p = figure(width=1400, height=800) # , y_axis_type=\"log\")\n",
     "p.xaxis.major_label_overrides = bin_labels\n",
+    "p.yaxis.visible = False\n",
     "\n",
     "days = {\n",
-    "    \"Monday\": \"#dfdf00\",\n",
-    "    \"Tuesday\": \"#ffc0cb\",\n",
-    "    \"Wednesday\": \"#008000\",\n",
-    "    \"Thursday\": \"#ffa500\",\n",
-    "    \"Friday\": \"#00bfff\",\n",
-    "    \"Saturday\": \"#800080\",\n",
-    "    \"Sunday\": \"#ff0000\"\n",
+    "    \"Monday\": \"#003c30\",\n",
+    "    \"Tuesday\": \"#01665e\",\n",
+    "    \"Wednesday\": \"#35978f\",\n",
+    "    \"Thursday\": \"#80cdc1\",\n",
+    "    \"Friday\": \"#bf812d\",\n",
+    "    \"Saturday\": \"#8c510a\",\n",
+    "    \"Sunday\": \"#543005\"\n",
     "}\n",
     "\n",
     "xs = np.arange(0, len(data[0]))\n",
+    "step = max(max(a) for a in data) * 0.3\n",
     "for weekday, (name, color) in enumerate(days.items()):\n",
-    "    ys = data[weekday]\n",
+    "    ys = data[weekday] + (6 - weekday) * step\n",
     "    p.line(x=xs, y=ys, line_width=2, color=color, legend_label=name)\n",
     "p.legend.location = \"top_left\"\n",
     "p.legend.click_policy=\"hide\"\n",
     "show(p)\n",
-    "if False:\n",
+    "if True:\n",
     "    output_file(\"traffic.html\", title=\"Home Network Traffic Graph\")\n",
     "    save(p)"
    ]
