Add probability of traffic graph

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -25,12 +25,12 @@
     "import dataloader\n",
     "importlib.reload(dataloader)\n",
     "\n",
-    "minutes_to_bin = 4\n",
+    "minutes_to_bin = 1\n",
     "data = np.zeros((7, 24 * 60 // minutes_to_bin), dtype=np.float32)\n",
     "datadir = Path(\"data\")\n",
     "days = list(sorted(datadir.iterdir()))\n",
     "for day in days:\n",
-    "    dataloader.rasterize_week(data, str(day))"
+    "    dataloader.frequency_data(data, str(day), 1_000_000)"
    ]
   },
   {
@@ -58,9 +58,9 @@
     "    posmod_hour = ((hour + 11) % 12) + 1\n",
     "    bin_labels[bin] = f\"{posmod_hour}:{minute:02} {'am' if hour < 12 else 'pm'}\"\n",
     "\n",
-    "p = figure(width=1400, height=800) # , y_axis_type=\"log\")\n",
+    "p = figure(width=1000, height=800) # , y_axis_type=\"log\")\n",
     "p.xaxis.major_label_overrides = bin_labels\n",
-    "p.yaxis.visible = False\n",
+    "#p.yaxis.visible = False\n",
     "\n",
     "days = {\n",
     "    \"Monday\": \"#003c30\",\n",
@@ -80,7 +80,7 @@
     "p.legend.location = \"top_left\"\n",
     "p.legend.click_policy=\"hide\"\n",
     "show(p)\n",
-    "if True:\n",
+    "if False:\n",
     "    output_file(\"traffic.html\", title=\"Home Network Traffic Graph\")\n",
     "    save(p)"
    ]
